# helix-discord-presence

./: .gitignore  Cargo.toml  README.md  languages.toml
script/: apply_language.py
src/: config.rs  languages.rs  main.rs  util.rs
src/client/: discord.rs  git.rs  mod.rs
